# ngsidekick-server

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt
src/ngsidekick_server/: __init__.py  app.py  wsgi.py
tests/: __init__.py  test_app.py
